--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "find-the-killer",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://Halid04.github.io/find-the-killer",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "primeicons": "^7.0.0",
+    "primereact": "^10.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
