--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "find-the-killer",
+  "homepage": "https://Halid04.github.io/find-the-killer/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "primeicons": "^7.0.0",
